# hacdc-ask-arxiv

./: README.md
hacdc-ask-arxiv/: pyproject.toml
scripts/: download_test_data.py
