[tool.poetry]
name = "hacdc-ask-arxiv"
version = "0.1.0"
description = ""
authors = ["Gabriel Altay <gabriel.altay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.279"
openai = "^0.28.0"
unstructured = "^0.10.11"
arxiv = "^1.4.8"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
